WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80034
REGRESSION (
r108956
): Safari Webpage Preview Fetcher crashes in WebCore::localizedString() when using a WebKit nightly build
https://bugs.webkit.org/show_bug.cgi?id=80034
Summary
REGRESSION (r108956): Safari Webpage Preview Fetcher crashes in WebCore::loca...
mitz
Reported
2012-03-01 10:07:09 PST
REGRESSION (
r108956
): Safari Webpage Preview Fetcher crashes in WebCore::localizedString() when using a WebKit nightly build
Attachments
Null-check the return value of CFBundleGetBundleWithIdentifier()
(1.88 KB, patch)
2012-03-01 10:12 PST
,
mitz
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-03-01 10:08:06 PST
<
rdar://problem/10942540
>
mitz
Comment 2
2012-03-01 10:12:38 PST
Created
attachment 129721
[details]
Null-check the return value of CFBundleGetBundleWithIdentifier()
WebKit Review Bot
Comment 3
2012-03-01 11:27:47 PST
Attachment 129721
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'ChangeLog', u'LayoutTests/ChangeLog', u'La..." exit_code: 1 Traceback (most recent call last): File "Tools/Scripts/check-webkit-style", line 48, in <module> sys.exit(CheckWebKitStyle().main()) File "/mnt/git/webkit-style-queue/Tools/Scripts/webkitpy/style/main.py", line 154, in main patch_checker.check(patch) File "/mnt/git/webkit-style-queue/Tools/Scripts/webkitpy/style/patchreader.py", line 66, in check self._text_file_reader.process_file(file_path=path, line_numbers=line_numbers) File "/mnt/git/webkit-style-queue/Tools/Scripts/webkitpy/style/filereader.py", line 130, in process_file self._processor.process(lines, file_path, **kwargs) File "/mnt/git/webkit-style-queue/Tools/Scripts/webkitpy/style/checker.py", line 838, in process checker.check(lines) File "/mnt/git/webkit-style-queue/Tools/Scripts/webkitpy/style/checkers/test_expectations.py", line 103, in check overrides = self._port_obj.test_expectations_overrides() AttributeError: 'NoneType' object has no attribute 'test_expectations_overrides' If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 4
2012-03-01 11:44:48 PST
Comment on
attachment 129721
[details]
Null-check the return value of CFBundleGetBundleWithIdentifier() View in context:
https://bugs.webkit.org/attachment.cgi?id=129721&action=review
> Source/WebCore/platform/mac/LocalizedStringsMac.cpp:55 > + else > + result = notFound; > > ASSERT_WITH_MESSAGE(result.get() != notFound, "could not find localizable string %s in bundle", key);
You are gonna hit the assert every time. Better move the assert in the if()
mitz
Comment 5
2012-03-01 20:55:08 PST
Fixed in <
http://trac.webkit.org/r109497
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug