<rdar://problem/10942540> REGRESSION (r108956): Safari Webpage Preview Fetcher crashes in WebCore::localizedString() when using a WebKit nightly build https://bugs.webkit.org/show_bug.cgi?id=80034

Reviewed by Benjamin Poulain.

Safari Webpage Preview Fetcher can’t access the WebCore framework when launched from a WebKit
nightly build. After r108956, this causes it to crash.

* platform/mac/LocalizedStringsMac.cpp:
(WebCore::localizedString): Added a null-check for the value returned from
CFBundleGetBundleWithIdentifier(CFSTR("com.apple.WebCore")).



Canonical link: https://commits.webkit.org/97173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109497 268f45cc-cd09-0410-ab3c-d52691b4dbfc